fix: some updates for material dialog and set the button height as the inherit path is too narrow

--- a/packages/durandal-playground/src/Components/material-button/material-button.scss
+++ b/packages/durandal-playground/src/Components/material-button/material-button.scss
@@ -1,3 +1,7 @@
 @use "@material/button";
 
 @include button.core-styles;
+
+.mdc-button {
+    line-height: 2.25rem;
+}
