--- a/packages/durandal-playground/src/Components/material-dialog/material-dialog.scss
+++ b/packages/durandal-playground/src/Components/material-dialog/material-dialog.scss
@@ -1,3 +1,9 @@
 @use "@material/dialog";
+@use "@material/button";
 
 @include dialog.core-styles;
+@include button.core-styles;
+
+.mdc-button {
+    line-height: 2.25rem;
+}
